修订api文档接口
修订api文档接口

--- a/unimall-launcher/src/main/resources/templates/document.html
+++ b/unimall-launcher/src/main/resources/templates/document.html
@@ -3,10 +3,10 @@
 
 <head>
     <title>easycampus Api文档</title>
-    <link href="https://windymuse.oss-cn-hangzhou.aliyuncs.com/open/style/commons.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://windymuse.oss-cn-hangzhou.aliyuncs.com/open/stylesheets/commons.css">
-    <link rel="stylesheet" type="text/css" href="https://windymuse.oss-cn-hangzhou.aliyuncs.com/open/stylesheets/index-news.css">
-    <script src="https://windymuse.oss-cn-hangzhou.aliyuncs.com/open/js/jquery-lastest.js"></script>
+    <link href="http://fengye-guoyu-test.oss-cn-beijing.aliyuncs.com/commons.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="http://fengye-guoyu-test.oss-cn-beijing.aliyuncs.com/commons2.css">
+    <link rel="stylesheet" type="text/css" href="http://fengye-guoyu-test.oss-cn-beijing.aliyuncs.com/index-news.css">
+    <script src="http://fengye-guoyu-test.oss-cn-beijing.aliyuncs.com/jquery-lastest.js"></script>
 </head>
 
 <body>
@@ -100,7 +100,7 @@
         </ul>
         <p>备案</p>
     </div>
-    <script src="http://open.fengqu.com/js/md5.min.js"></script>
+    <script src="http://fengye-guoyu-test.oss-cn-beijing.aliyuncs.com/md5.min.js"></script>
     <script type="text/javascript">
         var path = location.pathname.split("/");
         var len = path.length;
